Fix news element image overflow

--- a/page-making/css/styles.css
+++ b/page-making/css/styles.css
@@ -399,6 +399,11 @@ a:hover {
 	height: 200px;
 	background-color: #2c6dbf;
 }
+.news-element-placeholder img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 .news-element-title {
 	font-family: "Museo Cyrl";
 	font-size: 24px;
@@ -406,7 +411,7 @@ a:hover {
 }
 .news-element-text {
 	font-family: "GothamPro";
-	font-size: 15px;
+	font-size: 15px;--
 	line-height: 120%;
 }
 /*? === MAIN END === */
